--- a/src/ICom.Web/Views/Account/Login.cshtml
+++ b/src/ICom.Web/Views/Account/Login.cshtml
@@ -1,5 +1,4 @@
-﻿@using ICom.Core.AuthSecurity
-@model ICom.Web.Controllers.Account.ViewModels.LoginViewModel
+﻿@model ICom.Web.Controllers.Account.ViewModels.LoginViewModel
 
 @{
     Layout = null;
