--- a/src/ICom.Web/Views/Shared/_Layout.cshtml
+++ b/src/ICom.Web/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>@ViewBag.Title - My ASP.NET MVC Application</title>
+        <title>@ViewBag.Title | ICom</title>
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/css")
@@ -12,36 +12,29 @@
     </head>
     <body>
         <header>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
-                </div>
-                <div class="float-right">
-                    <section id="login">
-                        @Html.Partial("_LoginPartial")
-                    </section>
-                    <nav>
-                        <ul id="menu">
-                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            @if(Html.IsAdmin()) {
-                                <li>@Html.ActionLink("Administration", "Index", "Admin", new{area = "admin"}, null)</li>
-                            }
-                        </ul>
-                    </nav>
-                </div>
+            <div class="float-left">
+                <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home", new {area = ""}, null)</p>
+            </div>
+            <div class="float-right">
+                <section id="login">
+                    @Html.Partial("_LoginPartial")
+                </section>
+                <nav>
+                    <ul id="menu">
+                        <li>@Html.ActionLink("Home", "Index", "Home", new {area = ""}, null)</li>
+                        @if(Html.IsAdmin()) {
+                            <li>@Html.ActionLink("Administration", "Index", "Admin", new{area = "admin"}, null)</li>
+                        }
+                    </ul>
+                </nav>
             </div>
         </header>
         <div id="body">
-            @RenderSection("featured", required: false)
-            <section class="content-wrapper main-content clear-fix">
-                @RenderBody()
-            </section>
+            @RenderBody()
         </div>
         <footer>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - My ASP.NET MVC Application</p>
-                </div>
+            <div class="float-left">
+                <p>&copy; @DateTime.Now.Year - My ASP.NET MVC Application</p>
             </div>
         </footer>
 
