--- a/src/ICom.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/ICom.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,3 +1,3 @@
 ﻿@using ICom.Web.Infrastructure.HtmlHelpers
 
-@Html.User().Username! @Html.ActionLink("Logga ut", "Logout", "Account")
+@Html.User().Name! @Html.ActionLink("Logga ut", "Logout", "Account", new {area = ""}, null)
