--- a/src/ICom.Web/Views/Shared/_Layout.cshtml
+++ b/src/ICom.Web/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
             </div>
         </header>
         <div id="body">
+            @Html.RenderFlash()
             @RenderBody()
         </div>
         <footer>
