--- a/src/ICom.Web/Areas/Admin/Views/UserAdmin/Create.cshtml
+++ b/src/ICom.Web/Areas/Admin/Views/UserAdmin/Create.cshtml
@@ -9,36 +9,13 @@
 <h2>Skapa ny användare</h2>
 
 @using (Html.BeginForm()) {
-    @Html.ValidationSummary(true)
 
-    <fieldset>
-        <legend>Uppgifter</legend>
+    @Html.EditorFor(x => x.User)
 
-        <div class="editor-label">
-            @Html.LabelFor(x => x.InputModel.Name)
-        </div>
-        <div class="editor-field">
-            @Html.TextBoxFor(x => x.InputModel.Name)
-            @Html.ValidationMessageFor(x => x.InputModel.Name)
-        </div>
-    </fieldset>
-    <fieldset>
-        <legend>Rättigheter</legend>
-
-        <div class="editor-label">
-            @Html.LabelFor(x => x.InputModel.Type)
-        </div>
-        <div class="editor-field">
-            @Html.DropDownListFor(x => x.InputModel.Type, Html.UserHelper().TypeDropDown())
-            @Html.ValidationMessageFor(x => x.InputModel.Type)
-        </div>
-    </fieldset>
-
-    <p>
-        @Html.Submit("Skapa")
-    </p>
+    <p>@Html.Submit("Skapa")</p>
 }
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("/Assets/Scripts/app/userform.js")
 }
