--- a/src/ICom.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/ICom.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,3 +1,3 @@
 ﻿@using ICom.Web.Infrastructure.HtmlHelpers
 
-@Html.User().Name! @Html.ActionLink("Logga ut", "Logout", "Account", new {area = ""}, null)
+@Html.ActionLink(Html.User().Name, "Settings", "User", new {id = Html.User().Id, area = ""}, null)! @Html.ActionLink("Logga ut", "Logout", "Account", new {area = ""}, null)
