--- a/src/ICom.Web/Assets/Css/Site.css
+++ b/src/ICom.Web/Assets/Css/Site.css
@@ -1,4 +1,5 @@
-﻿html {
+﻿
+html {
     background-color: #e2e2e2;
     margin: 0;
     padding: 0;
@@ -458,10 +459,11 @@ textarea {
     input[type="submit"],
     input[type="button"],
     button {
+        -webkit-border-radius: 5px;
+        border-radius: 5px;
         background-color: #d3dce0;
         border: 1px solid #787878;
-        cursor: pointer;
-        font-size: 1.2em;
+        cursor: pointer;    
         font-weight: 600;
         padding: 7px;
         margin-right: 8px;
@@ -585,6 +587,40 @@ td {
 
 tr.pager td {
     padding: 0 0.25em 0 0;
+}
+
+/* Popup
+----------------------------------------------------------*/
+#lean_overlay {
+    position: fixed;
+    z-index:100;
+    top: 0px;
+    left: 0px;
+    height:100%;
+    width:100%;
+    background: #000;
+    display: none;
+}
+.popup {
+    background-color: white;
+    border-radius: 10px;
+    display: none;
+    border: 1px solid #d5d5d5;
+}
+
+.popup .head {
+    background-color: #EFEEEF;
+    -webkit-border-radius: 10px 10px 0px 0px;
+    border-radius: 10px 10px 0px 0px;
+    padding: 10px 20px;
+}
+
+.popup .body {
+    padding: 10px 20px;
+}
+
+.popup .head h2{
+    margin: 0 0 10px 0;
 }
 
 
