--- a/src/ICom.Web/Views/Shared/_Layout.cshtml
+++ b/src/ICom.Web/Views/Shared/_Layout.cshtml
@@ -40,6 +40,12 @@
         </footer>
 
         @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/Assets/Scripts/libs/jquery.leanModal.min.js")
         @RenderSection("scripts", required: false)
+        <script type="text/javascript">
+            $(document).ready(function () {
+                $("a[rel*=leanModal]").leanModal();
+            });
+        </script>
     </body>
 </html>
