UserInfos can now get deleted

--- a/src/ICom.Web/Views/User/Settings.cshtml
+++ b/src/ICom.Web/Views/User/Settings.cshtml
@@ -28,6 +28,7 @@
                     <tr>
                         <th>@info.Type.GetDescription()</th>
                         <td>@info.Info</td>
+                        <td>@Html.ActionLink("Ta bort", "DeleteInfo", new {id = info.Id})</td>
                     </tr>
                 }
             </tbody>
